Wrap rows with divs, move UA specific styles, IE6 fixes, add header scroll node (over the top of scrollbar), prevent selection at right time, use top borders to facilitate overflow hidden fixed height rows

--- a/css/columnset.css
+++ b/css/columnset.css
@@ -3,8 +3,9 @@
 	width: 100%;
 	position: relative; /* This is needed because we setting position: relative on cells in the grid for focus in IE7*/
 }
+
 .dgrid-column-set-cell {
-	vertical-align: bottom;
+	vertical-align: top;
 }
 .dgrid-column-set-scroller {
 	position: absolute;
